--- a/Rain Man/AndroidManifest.xml
+++ b/Rain Man/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.royvandewater.rainman"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="1.0"
+      android:name="RainManApplication">
     <uses-sdk android:minSdkVersion="10" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
