--- a/Rain Man/AndroidManifest.xml
+++ b/Rain Man/AndroidManifest.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.royvandewater.rainman"
-      android:versionCode="1"
-      android:versionName="1.0"
-      android:name="RainManApplication">
+    android:name="RainManApplication"
+    package="com.royvandewater.rainman"
+    android:versionCode="1"
+    android:versionName="0.1" >
+
     <uses-sdk android:minSdkVersion="10" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".RainManActivity"
-                  android:label="@string/app_name">
-            <intent-filter>
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+  
+        <service
+            android:name=".WeatherService" />
+
+        <activity
+            android:label="@string/app_name"
+            android:name=".RainManActivity" >
+            <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
+
 </manifest>
