--- a/Rain Man/AndroidManifest.xml
+++ b/Rain Man/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="RainManApplication"
     package="com.royvandewater.rainman"
     android:versionCode="1"
-    android:versionName="0.1" >
+    android:versionName="0.1">
 
     <uses-sdk android:minSdkVersion="10" />
 
@@ -13,20 +14,20 @@
 
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
-  
-        <service
-            android:name=".WeatherService" />
+        android:label="@string/app_name">
+
+        <service android:name=".WeatherService" />
 
         <activity
             android:label="@string/app_name"
-            android:name=".RainManActivity" >
-            <intent-filter >
+            android:name=".activities.RainManActivity">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.RainManPreferenceActivity" />
     </application>
 
 </manifest>
