--- a/Rain Man/AndroidManifest.xml
+++ b/Rain Man/AndroidManifest.xml
@@ -17,17 +17,16 @@
         android:label="@string/app_name">
 
         <service android:name=".WeatherService" />
-
+        
         <activity
             android:label="@string/app_name"
-            android:name=".activities.RainManActivity">
+            android:name=".activities.RainManPreferenceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.RainManPreferenceActivity" />
+        
     </application>
-
 </manifest>
